--- a/frontend/Bitki.Blazor/Components/Pages/Login.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/Login.razor
@@ -1,4 +1,5 @@
 @page "/login"
+@rendermode InteractiveServer
 @using Bitki.Blazor.Auth
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.Security.Claims
