--- a/frontend/Bitki.Blazor/Components/Pages/Register.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/Register.razor
@@ -1,4 +1,5 @@
 @page "/register"
+@rendermode InteractiveServer
 @using Microsoft.AspNetCore.Components.Authorization
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
