--- a/frontend/Bitki.Blazor/Components/Layout/MainLayout.razor
+++ b/frontend/Bitki.Blazor/Components/Layout/MainLayout.razor
@@ -3,13 +3,12 @@
 <div class="page">
     <div class="sidebar">
         <NavMenu />
+        <div class="sidebar-user-info">
+            <LoginDisplay />
+        </div>
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <LoginDisplay />
-        </div>
-
         <article class="page-container px-4">
             @Body
         </article>
